name:                   Abstract-Testing
version:                0.0.1
stability:              provisional
license:                BSD3
license-file:           LICENSE

cabal-version:          >= 1.8
build-type:             Simple

author:                 Andrew Darqui <andrew.darqui@gmail.com>
maintainer:             Andrew Darqui <andrew.darqui@gmail.com>
homepage:               github.com/adarqui/Abstract-Testing

category:               Experimental
synopsis:               Abstract

Library
 hs-source-dirs:        src
 exposed-modules:
                        Abstract.Testing

 build-depends:         base >= 3 && <5, Abstract-Interfaces, Abstract-Impl-Libs, Abstract-Impl-Redis, Abstract-Impl-Memcache
 ghc-options:           -Wall -rtsopts
