name:                   Abstract-Testing
version:                0.0.1
stability:              provisional
license:                BSD3
license-file:           LICENSE

cabal-version:          >= 1.8
build-type:             Simple

author:                 Andrew Darqui <andrew.darqui@gmail.com>
maintainer:             Andrew Darqui <andrew.darqui@gmail.com>
homepage:               github.com/adarqui/Abstract-Testing

category:               Experimental
synopsis:               Abstract

Library
 hs-source-dirs:        src
 exposed-modules:       Abstract.Testing.Lock
                        Abstract.Testing.Counter
                        Abstract.Testing.Queue
                        Abstract.Testing.Stack

                        Abstract.Testing.Misc

 build-depends:         base >= 3 && <5, bytestring, async, stm, Abstract-Interfaces, Abstract-Impl-Libs, Abstract-Impl-Redis, Abstract-Impl-Memcache
 ghc-options:           -Wall -rtsopts

Executable "run-counter-tests"
 main-is:               run-counter-tests.hs
 hs-source-dirs:        examples
 build-depends:         base >= 3 && <5, bytestring, async, stm, Abstract-Interfaces, Abstract-Impl-Libs, Abstract-Impl-Redis, Abstract-Impl-Memcache, Abstract-Testing
 GHC-Options:           -threaded -O2 -rtsopts -Wall

Executable "run-queue-tests"
 main-is:               run-queue-tests.hs
 hs-source-dirs:        examples
 build-depends:         base >= 3 && <5, bytestring, async, stm, Abstract-Interfaces, Abstract-Impl-Libs, Abstract-Impl-Redis, Abstract-Impl-Memcache, Abstract-Testing
 GHC-Options:           -threaded -O2 -rtsopts -Wall

Executable "run-stack-tests"
 main-is:               run-stack-tests.hs
 hs-source-dirs:        examples
 build-depends:         base >= 3 && <5, bytestring, async, stm, Abstract-Interfaces, Abstract-Impl-Libs, Abstract-Impl-Redis, Abstract-Impl-Memcache, Abstract-Testing
 GHC-Options:           -threaded -O2 -rtsopts -Wall
